base/gateway-routing/gateway-infra-gateaway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: 
  name: gateway
spec: 
  gatewayClassName: cloud-provider-kind
  listeners: 
  - name: default 
    hostname: "*.exampledomain.example"
    port: 80
    protocol: HTTP
    allowedRoutes: 
      namespaces: 
        from: All
